--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react": "^19.2.3",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.0.379",
-    "jszip": "^3.10.1",
-    
+    "jszip": "^3.10.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
